[package]
name = "rust_ta-lib"
version = "0.6.0-rc.1.build.0"
edition = "2021"
description="TA-Lib - Technical Analysis Library"
repository="https://github.com/rust-iso/rust_ta-lib"
license="Apache-2.0"
documentation = "https://docs.rs/rust_ta-libs/"
keywords=["talib", "ta-lib", "Technical", "Analysis","Fintech"]
exclude = ["3rdparty/ta-lib/ide"]
[dependencies]

[build-dependencies]
bindgen = "0.68.1"
cmake = "0.1.50"
concat-idents = "1.1.5"
rand = "0.8.5"
